Updated Gradient color on CSS

--- a/BAC-index.html
+++ b/BAC-index.html
@@ -31,7 +31,7 @@ body {
 color: #363b4e;
 background: linear-gradient(
   -225deg, 
-  #2CD8D5 0%, 
+  #cea1f8 0%, 
   #C5C1FF 56%, 
   #FFBAC3 100%);
 }
