--- a/BAC-index.html
+++ b/BAC-index.html
@@ -162,12 +162,14 @@
         font-family: "Albert Sans", sans-serif;
         font-size: 16px;
         text-align: justify;
+        padding: 3px;
       }
 
       .about-cbt-header {
         font-family: "Questrial", sans-serif;
         font-size: 23px;
         color: #352961;
+        padding: 3px;
       }
 
       .learn-more {
