changed icons and compatibility

--- a/BAC-index.html
+++ b/BAC-index.html
@@ -181,8 +181,9 @@
         font-family: "Questrial", sans-serif;
         font-size: 23px;
         padding-bottom: 2px;
-        margin-bottom: 5px;
+        margin-bottom: 6px;
         color: #352961;
+        text-align: center;
       }
 
       .buttons {
@@ -277,6 +278,16 @@
       footer a {
         text-decoration: none;
         color: #9d65c9;
+      }
+
+      @media (max-width: 768px) {
+        .flex-container {
+          flex-direction: column;
+        }
+        .bubble-journey-container,
+        .bubble-photos-container {
+          width: 100%;
+        }
       }
     </style>
   </head>
@@ -395,7 +406,7 @@
             <div class="tip">
               <p>
                 <span class="title"
-                  ><span class="icon">🐱‍🚀</span> <br /><strong
+                  ><span class="icon">👷‍♀️</span> <br /><strong
                     >Wear Full Gear</strong
                   ></span
                 >
